syntax = "proto3";

package smarthome;

option java_multiple_files = true;
option java_package = "com.smarthome.proto";
option java_outer_classname = "ThermostatProto";

// Thermostat Service
service ThermostatService {
  rpc TurnOn(ThermostatTurnOnRequest) returns (ThermostatTurnOnResponse);
  rpc TurnOff(ThermostatTurnOffRequest) returns (ThermostatTurnOffResponse);
  rpc SetTargetTemperature(SetTargetTemperatureRequest) returns (SetTargetTemperatureResponse);
  rpc SetMode(SetModeRequest) returns (SetModeResponse);
  rpc GetStatus(ThermostatGetStatusRequest) returns (ThermostatGetStatusResponse);
}

enum ThermostatMode {
  OFF = 0;
  HEAT = 1;
  COOL = 2;
  AUTO = 3;
}

message ThermostatTurnOnRequest {}

message ThermostatTurnOnResponse {
  bool success = 1;
  string message = 2;
}

message ThermostatTurnOffRequest {}

message ThermostatTurnOffResponse {
  bool success = 1;
  string message = 2;
}

message SetTargetTemperatureRequest {
  double target_temperature = 1;
}

message SetTargetTemperatureResponse {
  bool success = 1;
  string message = 2;
}

message SetModeRequest {
  ThermostatMode mode = 1;
}

message SetModeResponse {
  bool success = 1;
  string message = 2;
}

message ThermostatGetStatusRequest {}

message ThermostatGetStatusResponse {
  double current_temperature = 1;
  double target_temperature = 2;
  ThermostatMode mode = 3;
  bool heating = 4;
  bool cooling = 5;
}